--- a/public/css/users-list.css
+++ b/public/css/users-list.css
@@ -1,3 +1,30 @@
+#user-container {
+    text-align: center;
+}
+
+#user-container > * {
+    margin-bottom: 1.5rem;
+}
+.user-list-header {
+    text-align: left;
+}
+
+.pending-user-container {
+    padding: 1.5rem;
+    margin: 0px 0.5rem;
+    background-color: rgb(255, 198, 215); 
+}
+
+.active-user-container {
+    padding: 1.5rem;
+    margin: 0px 0.5rem;
+    background-color: rgb(40, 255, 40);
+}
+
+.userCard {
+    position: relative;
+}
+
 .userCard.pending {
     background-color: rgb(255, 182, 193); 
     border: 4px solid rgb(235, 148, 160);
@@ -5,5 +32,68 @@
 .userCard.active {
     background-color: rgb(18, 218, 18);
     border: 4px solid rgb(12, 179, 12);
+}
+
+.userCard > .name {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-top: 1.5rem;
+    margin-bottom: .5rem;
+}
+
+.userCard > .email {
+    position: absolute;
+    left: 5px;
+    top: 3px;
+    font-size: 1.5rem;
 
 }
+.userCard > .btn {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+
+.userCard.active > .btn:hover {
+    background-color: rgb(12, 179, 12);
+    border-color: rgb(12, 179, 12);
+}
+.userCard.active > .btn {
+    background-color: rgb(18, 218, 18);
+    border: 1px solid rgb(12, 179, 12);
+}
+
+.userCard.pending > .btn:hover {
+    background-color: rgb(235, 148, 160);
+    border-color: rgb(235, 148, 160);
+}
+.userCard.pending > .btn {
+    background-color: rgb(255, 182, 193);
+    border: 1px solid rgb(235, 148, 160);
+}
+
+.btn:hover{
+    color: #212529;
+    background-color: #b1c4d1;
+    border-color: #a9becc;
+}
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-color: white;
+    border: 1px solid grey;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+}
+
