--- a/public/css/users-list.css
+++ b/public/css/users-list.css
@@ -9,29 +9,11 @@
     text-align: left;
 }
 
-.pending-user-container {
-    padding: 1.5rem;
-    margin: 0px 0.5rem;
-    background-color: rgb(255, 198, 215); 
-}
-
-.active-user-container {
-    padding: 1.5rem;
-    margin: 0px 0.5rem;
-    background-color: rgb(40, 255, 40);
-}
-
 .userCard {
     position: relative;
-}
-
-.userCard.pending {
-    background-color: rgb(255, 182, 193); 
-    border: 4px solid rgb(235, 148, 160);
-}
-.userCard.active {
-    background-color: rgb(18, 218, 18);
-    border: 4px solid rgb(12, 179, 12);
+    border-radius: .25rem;
+    margin: 10px;
+    padding: 5px;
 }
 
 .userCard > .name {
@@ -56,6 +38,28 @@
     border-top-left-radius: 0px;
     border-bottom-right-radius: 0px;
 }
+
+.pending-user-container {
+    padding: 1.5rem;
+    margin: 0px 0.5rem;
+    background-color: rgb(255, 198, 215); 
+}
+
+.active-user-container {
+    padding: 1.5rem;
+    margin: 0px 0.5rem;
+    background-color: rgb(40, 255, 40);
+}
+
+.userCard.pending {
+    background-color: rgb(255, 182, 193); 
+    border: 4px solid rgb(235, 148, 160);
+}
+.userCard.active {
+    background-color: rgb(18, 218, 18);
+    border: 4px solid rgb(12, 179, 12);
+}
+
 
 
 .userCard.active > .btn:hover {
